<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="203dp"
        android:layout_margin="14dp"
        android:background="@drawable/shape1">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape2"
            android:fontFamily="@font/playfair_display_sc_black"
            android:padding="8dp"
            android:text="@string/header1"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/qr_code" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="@font/playfair_display_sc_bold"
            android:text="@string/fio"
            android:textColor="#5C5C5C"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/imageView4"
            android:background="@drawable/shape3"
            android:fontFamily="@font/playfair_display_sc"
            android:gravity="center|left"
            android:includeFontPadding="false"
            android:padding="4dp"
            android:text="@string/number"
            android:textColor="#5C5C5C"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView9"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="@font/playfair_display_sc"
            android:text="@string/age"
            android:textColor="#5C5C5C"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/playfair_display_sc_bold"
        android:text="@string/read_books_list"
        android:textColor="#636363"
        android:textSize="16sp" />




    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/book_name1"
        android:textColor="#757575" />
    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#B91EAC73"
        android:fontFamily="@font/playfair_display_sc_bold"
        android:text="@string/book_page_rating"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/book_name2"
        android:textColor="#757575" />
    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#B91EAC73"
        android:fontFamily="@font/playfair_display_sc_bold"
        android:text="@string/book_page_rating"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />
</LinearLayout>
